--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "@radix-ui/themes": "^2.0.3",
+    "easymde": "^2.18.0",
     "next": "14.0.4",
     "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
